--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,7 @@ allprojects {
 
     version = '1.0'
     ext {
-        appName = "Summer Days"
+        appName = "Binary Space Algorithm"
         gdxVersion = '1.9.10'
         roboVMVersion = '2.3.8'
         box2DLightsVersion = '1.5'
