--- a/ios/robovm.properties
+++ b/ios/robovm.properties
@@ -1,6 +1,6 @@
 app.version=1.0
 app.id=com.sparcsky.summerydays
-app.mainclass=com.sparcsky.summerydays.IOSLauncher
+app.mainclass=com.sparcsky.bsp.IOSLauncher
 app.executable=IOSLauncher
 app.build=1
 app.name=Summer Days
